[package]
name = "swap"
version = "0.1.0"
description = "Performing an amm swap on chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
jupiter-cpi = "3.0.0"
anchor-spl = "0.25.0"